# panel-method-3d

./: .gitignore  CMakeLists.txt  LICENSE  ]  main.cpp  octree_search.cpp
include/: central_difference.hpp  compTask.hpp  concepts.hpp  evalPoints.hpp  infMat.hpp  pm_octree_defs.hpp
include/aerocalcs/: aerocalcsingle.hpp
include/mat_reader/: mat_reader.hpp
include/panel_geo/: panel_geo.hpp
include/panel_method/: ipanel.hpp  source_doublet_single.hpp  source_doublet_single_oct.hpp
include/singularity/: const_doublet.hpp  const_source.hpp  iconst_sing.hpp
include/solver/: dense_solver.hpp  isolver.hpp  sparse_solver.hpp
include/surface/: surface_panel.hpp  surface_reader.hpp  wake_panel.hpp
include/utils/: utils.hpp
src/: surface_reader.cpp  utils.cpp
src/aerocalcs/: aerocalcs.cpp
src/mat_reader/: mat_reader.cpp
src/panel_geo/: panel_geo.cpp
src/panel_method/: source_doublet_single.cpp  source_doublet_single_oct.cpp
src/surface/: surface_panel.cpp  wake_panel.cpp
tests/: central_difference_test.cpp
tests/octree/: octree_test.cpp
tests/panel_geo/: panel_geo_test.cpp
tests/singularity/: singularity_test.cpp
tests/surface/: surface_test.cpp
tests/test_case_validation_wing/: test_case_validation_wing.cpp
tests/test_data/: converted.txt  converted_4elementairfoil_DegenGeom.txt  converted_low_res.txt  converted_low_res_multi.txt  converted_multi.txt  long_wing.txt  long_wing_low_res.txt  long_wing_low_res10.txt  naca0010.txt  naca0010lowlowres.txt  naca0010lowres.txt  point_doublet_test.txt  point_source_test.txt  rectangular_doublet_test.txt  rectangular_source_test.txt  singlepanel.txt  singlepanel00.txt  validation_wing.txt
tests/test_data/no_wake/: converted.txt  converted_4elementairfoil_DegenGeom.txt  converted_low_res.txt  converted_multi.txt  singlepanel.txt
tests/utils/: utils_test.cpp
